objects/CEE_Jiffle_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <description>This field is to store the Email Address of the meeting attendee</description>
        <label>Attendee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attendee_Status__c</fullName>
        <description>This field is to store the status of the meeting attendee</description>
        <label>Attendee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Attended Meeting</fullName>
                </value>
                <value>
                    <fullName>Didnt Attend Meeting</fullName>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>This field is used to store the Company information of the Meeting Attendee</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Scheduler__c</fullName>
        <description>This field is to establish the Master-Detail relationship with Customer Engagement Scheduler record.</description>
        <label>Customer Engagement Scheduler</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>CEE Jifflenow Attendees</relationshipLabel>
        <relationshipName>CES_Jiffle_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Attended__c</fullName>
        <label>Meeting Attended ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Dont Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Host__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to know whether the meeting attendee is Host of the meeting or not</description>
        <label>Meeting Host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Requestor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to know whether the meeting attendee is Requestor of the meeting or not</description>
        <label>Meeting Requestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field is to store the Title of the meeting attendee</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This custom object is to store the information about the Jifflenow meeting attendees</description>
    <label>zzCEE Jifflenow Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEE Jifflenow Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>